# task-research

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
Claude-research/: file_inventory.json  file_inventory.md  process_details.json  task_details.json  task_names.json
Claude-research/code/citation_enrichment/: enrich_citations_host_script.py  enrich_process_references.py  enrich_task_citations_host_script.py  fixup_enriched.py  inspect_enriched_quality.py  parse_citation_string.py  parse_citation_string_tests.py  parse_task_references_dryrun.py  resolve_citations.py
Claude-research/code/data_management/: add_aliases_2026-04-26.py  add_task_alias_expansions_2026-04-28.py  add_url_field.py  add_variation_justifications.py  apply_variation_audit.py  cleanup_canonical_names.py  extract_process_details_from_md.py  fix_process_html_entities.py  regenerate_derived_files.py  regenerate_derived_files_test.py  validate_catalog.py  validate_tasks.py
Claude-research/code/literature_search/: README.md  _patch_triage_rules.py  apply_drops.py  cache.py  fos_map.py  identity.py  migrate_references.py  normalize.py  patch_malformed.py  phase1_validate.py  phase3_extract_review.py  phase3_render.py  phase3_search.py  present_candidates.py  rank_and_select.py  resolve_landmarks.py  search_queries.py  serialize_candidates.py  species.py  test_cache.py  test_identity.py  tier_classify.py  triage_existing_refs.py  triage_rules.py
Claude-research/code/literature_search/clients/: __init__.py  crossref.py  europepmc.py  openalex.py  semanticscholar.py  unpaywall.py
Claude-research/instructions/: alias_generation_plan_2026-04-26.md  citation_enrichment_thinking_2026-04-20.md  cleanup_plan_2026-04-23.md  handoff_process_criteria_audit.md  landmark_refs_2026-04-22.md  landmark_refs_first_review_gemini-manual.md  landmark_refs_proposed_2026-04-22.md  landmark_refs_second_pass_thinking_2026-04-22.md  literature_search_plan_2026-04-21.md  pdf_naming_thinking_2026-04-21.md  phase1_instructions_thinking_2026-04-21.md  phase2_instructions_thinking_2026-04-22.md  phase3_instructions_thinking_2026-04-23.md  phase3_redesign_plan_2026-04-28.md  search_strategy_decisions_2026-04-24.md  search_strategy_opus_session.md  task_alias_abbreviations_2026-04-28.md  task_citation_enrich_processes_instructions.md  task_citation_enrich_tasks_instructions.md  task_consolidate_process_files_instructions.md  task_literature_search_phase1_instructions.md  task_literature_search_phase2_instructions.md  task_literature_search_phase3_instructions.md  task_rename_hedtsk_ids_instructions.md  task_search_revamp_sonnet_2026-04-24.md  task_variation_audit.md  task_variation_audit_instructions.md  task_variation_audit_thinking_2026-04-21.md  task_variation_audit_thinking_2026-04-21_sonnet.md
Claude-research/outputs/aliases/: proposed_aliases_2026-04-26.md
Claude-research/outputs/phase3/candidates/: hed_acoustic_processing.json  hed_action_initiation.json  hed_active_maintenance.json  hed_affective_priming.json  hed_alerting.json  hed_analogical_reasoning.json  hed_antisaccade.json  hed_approach_motivation.json  hed_associative_learning.json  hed_attention_shifting.json  hed_attentional_awareness.json  hed_attentional_capture.json  hed_auditory_perception.json  hed_auditory_tone_discrimination.json  hed_autobiographical_memory.json  hed_avoidance_motivation.json  hed_biological_motion_perception.json  hed_body_ownership.json  hed_causal_reasoning.json  hed_choice_commitment.json  hed_chunking.json  hed_conflict_monitoring.json  hed_consolidation.json  hed_declarative_memory.json  hed_deductive_reasoning.json  hed_delay_discounting.json  hed_depth_perception.json  hed_directed_forgetting.json  (+229 more)
Claude-research/schemas/: process_details.schema.json  task_details.schema.json
(+338 files in other folders)
