[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "task-research"
version = "0.1.0"
description = "Research scripts for categorizing cognitive tasks and processes using OpenAlex, Cognitive Atlas, and HED annotation."
readme = "README.md"
authors = [
    { name = "Kay Robbins", email = "Kay.Robbins@utsa.edu" },
]
maintainers = [
    { name = "Kay Robbins", email = "Kay.Robbins@utsa.edu" },
]
license = {text = "MIT"}
keywords = ["cognitive tasks", "cognitive processes", "HED", "OpenAlex", "Cognitive Atlas", "neuroscience", "annotation", "taxonomy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.10"

dependencies = [
    "requests>=2.28.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "typos>=1.29.0",
    "mdformat>=0.7.0",
]
test = [
    "coverage>=7.0.0",
    "pytest>=8.0.0",
]


[tool.typos.files]
extend-exclude = [
    "*.pdf",
    "*.svg",
    "venv*/",
    ".venv*/",
    "*.yaml",
    "*.yml",
    "*.json",
    "*.toml",
    "OpenAlex/raw/",
    "OpenAlex/normalized/",
]

[tool.typos.default.extend-words]
# Domain-specific terms and abbreviations that are not typos
te = "te"
hed = "hed"

[tool.ruff]
# Target Python 3.10+
target-version = "py310"
line-length = 120

# Exclude common directories
exclude = [
    '.git',
    '.venv',
    'venv',
    '__pycache__',
    'build',
    'dist',
    '*.egg-info',
    'OpenAlex/raw',
    'OpenAlex/normalized',
    '.status',
]

[tool.ruff.lint]
# Enable flake8-style checks plus additional rules
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "N802",   # Function name should be lowercase (many test methods use camelCase)
    "N803",   # Argument name should be lowercase (DataFrame df is common)
    "N806",   # Variable in function should be lowercase (common in scientific code)
    # Style rules that are too opinionated
    "SIM108", # if-else-block-instead-of-if-exp (ternary operator preference)
    "SIM105", # suppressible-exception (use contextlib.suppress)
    "SIM118", # in-dict-keys (x in dict vs x in dict.keys())
    "SIM102", # collapsible-if (nested if statements)
    "SIM103", # needless-bool (return bool vs if/else return True/False)
    "SIM110", # reimplemented-builtin (any/all reimplementation)
    "SIM101", # duplicate-isinstance-call
    # Python 3.10+ features
    "UP007",  # Use X | Y for Union types (requires 3.10+)
    "UP008",  # Use super() without parameters (we're okay with explicit)
    "UP031",  # Use format strings over %-formatting (legacy code compatibility)
    "UP028",  # yield in for loop
    "UP045",  # Use X | None for Optional (requires 3.10+)
]

# Allow unused imports in __init__.py files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
# Maximum complexity (matching your flake8 setting)
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["OpenAlex"]

[tool.ruff.format]
# Ruff format settings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
